Structuration du dossier

--- a/src/test.tex
+++ b/src/test.tex
@@ -13,34 +13,65 @@
 \tableofcontents{}
 \newpage
 
-\part{Bilan: Ce que je suis}
-\section{Compétences}
-\subsection{Théorique (Savoir)} 
-\subsection{Expérience (Savoir-Faire)}  
-\subsection{Personnalité (Savoir-Être)}  
-\section{Synthèse du bilan personnel} 
-\subsection{Mes objectifs}
-\subsection{Mes priorités}
- 
-\part{Projet: Ce que je veux faire}
-\section{Présentation du projet} 
-\subsection{Mes possibilités}
-\subsection{Mes contraintes}
+\part{Introduction}
+\chapter{Remerciements}
+\chapter{Guide de lecture}
 
-\section{Présentation de l'emploi}
-\subsection{Le domaine d'activité}
-\subsection{La fonction}
+\part{Bilan personnel}
 
-\part{Marché: Comment je peux le faire}
-\section{Présentation de l'état du marché}
+\chapter{Compétences et savoirs} 
+\section{Introspection}
+\subsection{Comportement}
+\subsection{Motivations}
+\subsection{Valeurs}
 
-\part{Actions: Ce que je vais faire}
-\section{Stratégie de communication}
-\subsection{Me faire connaitre}
-\subsection{Faire connaitre mon projet}
-\subsection{Faire connaitre mes capacités}
-\subsection{Convaincre} 
+\section{Compétences métiers} 
+\subsection{Ma formation}
+\subsection{Mon expérience}
 
+\chapter{Synthèse}
+\section{Mes objectifs}
+\section{Mes priorités}
+
+\part{Projet Professionnel}
+
+\chapter{Construction du projet} 
+\section{Missions et tâches}
+\section{L'environnement}
+
+\chapter{Vers un métier}
+\section{Le domaine d'activité}
+\section{La fonction}
+
+\chapter{Rencontre avec professionnels}
+\section{Le monde du libre}
+\section{Le monde de l'enseignement et de la recherche}
+
+\chapter{Confrontation au marché}
+\section{Les besoins}
+\section{Les profils recherchés}
+\section{Mes atouts}
+
+\part{Stratégies d'action}
+
+\chapter{Stratégie d'acquisition de compétences}
+\section{La formation}
+\section{Les expériences}
+\subsection{Du choix des stages}
+
+\chapter{Stratégie d'adaptation au marché}
+\section{Secteurs}
+\section{Entreprises}
+
+\chapter{Stratégie de communication}
+\section{Les réseaux professionnels}
+\section{Recherche de stages et d'emplois}
+\subsection{Lettre de motivation}
+\subsection{CV}
+\subsection{Entretiens}
+
+\part{Conclusion}
+\chapter{Apport du Cursus Master en Ingénerie}
 
 
 \end{document} 
