Rennomage du .tex et suppression du .odt

--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -43,7 +43,7 @@
 \section{Le domaine d'activité}
 \section{La fonction}
 
-\chapter{Rencontre avec professionnels}
+\chapter{Rencontre avec des professionnels}
 \section{Le monde du libre}
 \section{Le monde de l'enseignement et de la recherche}
 
