--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{report} 
+\documentclass[a4paper,12pt, draft]{report} 
 
 \usepackage[francais]{babel}
 \usepackage[utf8]{inputenc}
@@ -20,8 +20,41 @@
 \part{Bilan personnel}
 
 \chapter{Compétences et savoirs} 
+
+Dans ce chapitre nous allons faire une synthèse de mes compétences.
+Celles-ci seront traitées selon leurs natures.
+Étant issue de savoir différents, j'ai décidé de les traiter en deux parties.
+
+
 \section{Introspection}
+Dans cette partie nous allons nous intéresser aux compétences liées au \textbf{savoir-être} et à la \textbf{personnalité}. Celle-ci est consituée de traits que l'on peut considérer comme des qualités ou bien comme des défauts. Il est alors difficile de rester objectif tant cela est une affaire de \textbf{point de vue}. Je me vois d'une certaine manière, les autres me voient différement, et je me vois à travers le regard des autres encore différement. Cette divergence des points de vues rend mon travail d'analyse tout à fait \textbf{subjectif}. Je traiterai ici uniquement ma vision que je m'efforcerai de pondéré en m'aidant d'un exercice d'autoportrait\footnote{réference nécessaire} effectué dans le cadre du CMI\footnote{Cursus Master en Ingénierie}.
+
 \subsection{Comportement}
+\begin{figure}[h]
+  \begin{tabular}{|l|l|l|}
+    \hline
+  \item \texttt{l} \textsc{Trait} & \textsc{Qualité} & \textsc{Défaut}\\
+    \hline
+    \hline
+  \item Curieux & Passionné & Trop agité, éparpillé \\
+    \hline
+    
+  \end{tabular}\\
+\caption{une liste de}
+\end{figure}
+
+\begin{description}
+\item [Curieux]car j'adore apprendre et découvir de nouvelles choses.
+\item [Partageur]car j'aime recevoir autant qu'offrir et je crois en la coopération.
+\item [Volontaire]car j'aime relever des challenges, aller plus loin et appronfondir.
+\end{description}
+
+\begin{description}
+\item [Timide]J'ai du mal à faire face à certaines situations.
+\item [Perfectionniste]Je m'acharne souvent par refus de l'abandon et de l'échec.
+\item [Rêveur]J'ai tendance à suivre mon instinct et mes envies.
+\end{description}
+
 \subsection{Motivations}
 \subsection{Valeurs}
 
