--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -6,6 +6,11 @@
 \author{Bérenger Ossete Gombe}
 \title{Dossier PPP}
 
+%==================== NEW COMMANDS ====================
+%\newcommand{\tabTitle}[1]{\multicolumn{1}{|c|}{\textsc{#1}} }
+\newcommand{\tabTitle}[1]{\hfill{} \textsc{#1} \hfill{} }
+%======================================================
+
 \begin{document}
 \maketitle
 
@@ -29,34 +34,97 @@ Celles-ci seront traitées selon leurs natures.
 \section{Introspection}
 Dans cette partie nous allons nous intéresser aux compétences liées au \textbf{savoir-être} et à la \textbf{personnalité}. Celle-ci est consituée de traits que l'on peut considérer comme des qualités ou bien comme des défauts. Il est alors difficile de rester objectif tant cela est une affaire de \textbf{point de vue}. Je me vois d'une certaine manière, les autres me voient différement, et je me vois à travers le regard des autres encore différement. Cette divergence des points de vues rend mon travail d'analyse tout à fait \textbf{subjectif}. Je traiterai ici uniquement ma vision que je m'efforcerai de pondéré en m'aidant d'un exercice d'autoportrait\footnote{réference nécessaire} effectué dans le cadre du CMI\footnote{Cursus Master en Ingénierie}.
 
+\newpage
 \subsection{Comportement}
-\begin{figure}[h]
-  \begin{tabular}{|l|l|l|}
-    \hline
-  \item \texttt{l} \textsc{Trait} & \textsc{Qualité} & \textsc{Défaut}\\
-    \hline
-    \hline
-  \item Curieux & Passionné & Trop agité, éparpillé \\
-    \hline
-    
-  \end{tabular}\\
-\caption{une liste de}
-\end{figure}
+
+Voici un premier lieu un classement de ce que j'estime être mes principaux traits de personnalités. Je ne les qualifie volontairement pas de défauts ou de qualités\\
 
 \begin{description}
 \item [Curieux]car j'adore apprendre et découvir de nouvelles choses.
 \item [Partageur]car j'aime recevoir autant qu'offrir et je crois en la coopération.
 \item [Volontaire]car j'aime relever des challenges, aller plus loin et appronfondir.
+\item [Timide]car j'aime me retrouver dans des situations connus et/ou maitrisées
+\item [Perfectionniste]car je refuse l'abandon et l'échec.
+\item [Rêveur]car j'aime suivre mon instinct et mes envies.
 \end{description}
 
-\begin{description}
-\item [Timide]J'ai du mal à faire face à certaines situations.
-\item [Perfectionniste]Je m'acharne souvent par refus de l'abandon et de l'échec.
-\item [Rêveur]J'ai tendance à suivre mon instinct et mes envies.
-\end{description}
+\begin{figure}[h]
+  \begin{tabular}{|l|c|c|}
+    \hline
+  \tabTitle{Trait} & \multicolumn{2}{c|}{\tabTitle{Point de vue}} \\
+\hline
+ & \tabTitle{Qualité} & \tabTitle{Defaut} \\
+\hline
+  Curieux & Passionné & Trop agité, éparpillé \\
+  \hline
+  Partageur & ??? & ???\\
+  \hline
+  Volontaire & ??? & ??? \\
+  \hline
+  Timide & Réfléchi & Asocial \\
+  \hline
+  Perfectionniste & Appliqué & Obsédé \\
+  \hline
+  Rêveur & Imaginatif & Dispersé \\
+  \hline
+
+
+    
+  \end{tabular}\\
+\caption{Approche de mes principaux traits de personnalités}
+\end{figure}
+
 
 \subsection{Motivations}
+Mes principales motivations sont  l'\textbf{acquisition de savoir} et 
+le \textbf{partage de connaissances}. 
+
+\paragraph{L'attrait pour la curiosité}
+\subparagraph{}
+En effet depuis toujours (aussi loin que je puisse m'en souvenir), j'ai toujours été attiré par ce qui est curieux, étonnant et différent de ce que je connais d'habitude.
+\subparagraph{}
+\textit{Par exemple} bien que je ne suis qu'en licence 2 d'informatique, j'ai une bonne connaissance du C++ bien qu'on nous ne l'avons pas abordé en cours. Ce que je sais et ce que je suis capable de faire en algorithmique et à l'aide du C++ je l'ai acquis seul, à l'aide de cours et tutoriels trouvés sur internet. 
+
+\paragraph{L'importance du partage}
+\subparagraph{}
+Tout ce que j'ai appris en dehors de mes études est principalement grâce à internet et aux projets d'éducations pour tous tels Wikipedia ou OpenClassRooms\footnote{Anciennement ``le site du zéro''}.
+Je soutien totalement ce genre de projet qui, je le pense, sont dans l'esprit du siècle des lumières avec leur idéaux de diffusions du savoir. Le partage du savoir permet à tout le monde d'accéder à la connaissance en toute liberté et sans descrimination. Cela m'a permis de découvrir, de me renseigner, d'apprendre. 
+
+\subparagraph{}
+La découverte apparait alors comme une première étape, le partage de la découverte étant la seconde. Je pense que le partage est nécessaire, et que sans partage on aboutit rapidement  à l'établissement d'une élite intellectuelle. Si le savoir n'est pas partagé alors on entre dans un modèle de confrontation entre ceux qui détiennent le savoir (qui manipule) et les autres (qui tente de se libérer). Je pense que la coopération est le modèle le plus profitable\footnote{Cf. Théorie des jeux} pour tous.
+
+
+
+
 \subsection{Valeurs}
+\paragraph{}
+Nous avons vu que mes principales motivations sont l'acquisitions de connaissance puis leurs partages. Derrière ces motivations, se cachent de fortes valeurs.
+On peut résumer mes valeurs par le mot \textbf{libre}.
+
+\paragraph{Point rapide sur le libre}
+Un logiciel est dit libre s'il respecte les quatre libertés suivantes
+\begin{enumerate}
+\item La liberté de l'exécuter selon notre bon vouloir
+\item La liberté d'étudier et de modifier le code source
+\item La liberté de le partager
+\item La liberté de partager notre version modifiée
+\end{enumerate}
+
+
+\paragraph{Ma découverte du libre}
+
+Ma première expérience de la liberté informatique concerne le site web Wikipédia. J'ai été émerveillé par cette Encyclopédie\footnote{Encyclopédie de Diderot} moderne.
+Ce projet collaboratif permet à tout le monde d'apprendre et de participer à la diffusion des connaissances.
+J'ai ensuite fais connaissance avec l'OS\footnote{Operating System (Système d'exploitation)} Gnu/Linux par pur hasard. J'ai fais alors l'expérience d'une liberté que je ne connaissais pas avec Windows. J'utilisais toujours ce dernier, considérant Gnu/Linux comme une curiosité technologique intéressante. 
+Cela a duré jusqu'au moment où je suis tombé par pur hasard encore sur une conférence de R.Stallman\footnote{Richard Matthew \textsc{Stallman} (1953 - ): Fondateur de la Free Software Foundation et diffuseur historique des idées du logiciel libre.}. J'ai alors réalisé à quel point la liberté était importante pour moi.
+
+\paragraph{L'influence du libre sur moi}
+Je suis convaincu que nous devons avoir des logiciels libres, tournant sur du materiel libre et en communication entre eux via des bandes-passantes libres afin de rester maître de notre informatique.
+C'est un combat qui me tient à coeur car il me parait juste, éthique et d'une importance capital dans la mesure où nous construisons une ``société assistée par ordinateur''. Je suis en faveur d'une informatique libre, et également d'une culture libre et d'une éducation libre. En effet, l'homme devrait être au centre de la société en tant qu'acteur et non en tant que produit. Le savoir devrait être partagé, et non breveté puis vendu sous licence.
+
+\paragraph{}
+Mes motivations sont donc portées par ces valeurs. Celle-ci guident grandement la construction de mon projet professionnel, c'est pourquoi j'ai pris la liberté d'autant les détailler (bien qu'il ne s'agisse en réalité que d'un résumé).
+Je vais ainsi devoir accorder ces valeurs avec mon projet professionnel, ce qui constitue une \textbf{très forte contrainte} que je me fixe comme nous le verrons dans la synthèse du bilan personnelle.
 
 \section{Compétences métiers} 
 \subsection{Ma formation}
