Au milieu de la synthese

--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -51,6 +51,7 @@ Voici un premier lieu un classement de ce que j'estime être mes principaux trai
 \begin{figure}[h]
   \begin{tabular}{|l|c|c|}
     \hline
+
   \tabTitle{Trait} & \multicolumn{2}{c|}{\tabTitle{Point de vue}} \\
 \hline
  & \tabTitle{Qualité} & \tabTitle{Defaut} \\
@@ -124,15 +125,73 @@ C'est un combat qui me tient à coeur car il me parait juste, éthique et d'une 
 
 \paragraph{}
 Mes motivations sont donc portées par ces valeurs. Celle-ci guident grandement la construction de mon projet professionnel, c'est pourquoi j'ai pris la liberté d'autant les détailler (bien qu'il ne s'agisse en réalité que d'un résumé).
-Je vais ainsi devoir accorder ces valeurs avec mon projet professionnel, ce qui constitue une \textbf{très forte contrainte} que je me fixe comme nous le verrons dans la synthèse du bilan personnelle.
+Je vais ainsi devoir accorder ces valeurs avec mon projet professionnel, ce qui constitue une \textbf{très forte contrainte} que je me fixe comme nous le verrons dans la synthèse du bilan personnel \footnote{Voir le chapitre \ref{RefSyntheseBilanPerso} en page \pageref{RefSyntheseBilanPerso}}.
 
-\section{Compétences métiers} 
+\newpage
+
+\section{Compétences métiers}
 \subsection{Ma formation}
+Voici une liste des diplômes\footnote{Licence d'informatique à venir} obtenu au cours de ma scolarité.
+\begin{figure}[h]
+\begin{tabular}{|l|c|r|}
+\hline
+\tabTitle{Diplôme} & \tabTitle{Années} & \tabTitle{Établissement}\\
+\hline
+Brevet des collèges & 2010 & Collège Joseph Proudhon \\
+\hline
+Baccalauréat Scientifique & 2013 & Lycée Louis Pasteur \\
+\hline
+Licence d'Informatique & 2016 & Université de Franche-Comté\\
+\hline
+\end{tabular}
+\caption{Diplomes obtenus} 
+\end{figure}
 \subsection{Mon expérience}
+\paragraph{}
+Je n'ai \textit{\textbf{aucune}} expérience professionnelle en dehors de mon stage de troisième.
 
-\chapter{Synthèse}
+\paragraph{}
+Durant cette année de L2 j'ai pu participer à plusieurs reprise à des évenements organisés par l'UFC\footnote{Université de Franche-Comté}. Ces évenements m'ont apportées des expériences de travail d'équipe. En voici un résumé.
+
+\begin{figure}[h]
+\begin{tabular}{|c|c|c|}
+\hline
+\tabTitle{Expérience}  &  \tabTitle{Contexte} & \tabTitle{Apports} \\
+\hline
+Nuit de L'info 2014  & UFC & Travail d'équipe \\
+\hline
+Club jeux-vidéo (DPS)  & UFC & Travail d'équipe \\
+\hline
+
+\end{tabular}
+\caption{Expériences scolaires}
+\end{figure}
+
+\chapter{Synthèse} \label{RefSyntheseBilanPerso}
+Nous avons vu précédemment une liste de mes compétences et de mes savoirs.
+En voici une synthèse.
+
+\paragraph{Savoir}
+J'ai un baccalauréat scientifique et je prépares une licence d'informatique.
+
+\paragraph{Savoir-Être}
+Je suis intéressé par la découverte et le partage de connaissances. C'est un de mes points forts car je suis très motivé et volontaire.
+
+\paragraph{Savoir-Faire}
+Il s'agit véritablement de mon point faible car je ne possède aucune expérience (ni professionnelle ni extra scolaire).
+
 \section{Mes objectifs}
+
 \section{Mes priorités}
+
+\begin{enumerate}
+\item Travailler dans un milieu professionnel qui correspond à mes valeurs
+\item Pouvoir faire preuve de créativité
+\item Développer mes compétences : actualiser mon potentiel
+
+
+\end{enumerate}
+
 
 \part{Projet Professionnel}
 
