--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -181,21 +181,35 @@ Je suis intéressé par la découverte et le partage de connaissances. C'est un 
 Il s'agit véritablement de mon point faible car je ne possède aucune expérience (ni professionnelle ni extra scolaire).
 
 \section{Mes objectifs}
-
+Mon objectif principal est d'apprendre, d'acquérir de nouvelles compétences au sein d'un travail.
 \section{Mes priorités}
+\paragraph{}
+Dans le cadre du module de PPP j'ai fais un travail d'analyse sur mes priorités professionnelles. Voici les trois principales trouvées.
 
+\paragraph{Résumé}
+Liste de mes principales priorités
 \begin{enumerate}
 \item Travailler dans un milieu professionnel qui correspond à mes valeurs
 \item Pouvoir faire preuve de créativité
 \item Développer mes compétences : actualiser mon potentiel
-
-
 \end{enumerate}
 
+\newpage
+
+\paragraph{Analyse}
+Je vais maintenant préciser un peu ces priorités.
+\subparagraph{Travailler dans un milieu professionnel qui correspond à mes valeurs}
+Car je ne pense pas être capable de travailler dans un milieu ayant des valeurs trop différentes des miennes. 
+
+\subparagraph{Pouvoir faire preuve de créativité}
+Car je trouve qu'il est important pour moi d'avoir un degré de liberté minimum. En effet, la possibilité de faire preuve de créativité permet de personnaliser, d'adapter et d'orienter son travail.
+
+\subparagraph{Développer mes compétences : actualiser mon potentiel}
+Car j'aime apprendre de nouvelles choses et m'améliorer, et que je ne souhaite pas stagner professionnellement.
 
 \part{Projet Professionnel}
 
-\chapter{Construction du projet} 
+\chapter{Construction du projet}
 \section{Missions et tâches}
 \section{L'environnement}
 
