--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -83,8 +83,10 @@ le \textbf{partage de connaissances}.
 \paragraph{L'attrait pour la curiosité}
 \subparagraph{}
 En effet depuis toujours (aussi loin que je puisse m'en souvenir), j'ai toujours été attiré par ce qui est curieux, étonnant et différent de ce que je connais d'habitude.
-\subparagraph{}
-\textit{Par exemple} bien que je ne suis qu'en licence 2 d'informatique, j'ai une bonne connaissance du C++ bien qu'on nous ne l'avons pas abordé en cours. Ce que je sais et ce que je suis capable de faire en algorithmique et à l'aide du C++ je l'ai acquis seul, à l'aide de cours et tutoriels trouvés sur internet. 
+\subparagraph{Exemple}
+J'ai une certaine connaissance du C++, qui est un langage de programmation que je n'ai pas vu dans le cadre de mes études.  Ce que je sais et ce que je suis capable de faire en algorithmique et à l'aide du C++ je l'ai acquis seul, à l'aide de cours et tutoriels trouvés sur internet. 
+
+ 
 
 \paragraph{L'importance du partage}
 \subparagraph{}
@@ -94,21 +96,23 @@ Je soutien totalement ce genre de projet qui, je le pense, sont dans l'esprit du
 \subparagraph{}
 La découverte apparait alors comme une première étape, le partage de la découverte étant la seconde. Je pense que le partage est nécessaire, et que sans partage on aboutit rapidement  à l'établissement d'une élite intellectuelle. Si le savoir n'est pas partagé alors on entre dans un modèle de confrontation entre ceux qui détiennent le savoir (qui manipule) et les autres (qui tente de se libérer). Je pense que la coopération est le modèle le plus profitable\footnote{Cf. Théorie des jeux} pour tous.
 
+\subparagraph{Exemple} En terminal j'ai fais découvrir à mon meilleur ami la programmation en C++. Il s'est par la suite redirigé vers un cursus informatique (ce qui me permet de croire que mon partage à été concluant et efficace).
+
 
 
 
 \subsection{Valeurs}
 \paragraph{}
 Nous avons vu que mes principales motivations sont l'acquisitions de connaissance puis leurs partages. Derrière ces motivations, se cachent de fortes valeurs.
-On peut résumer mes valeurs par le mot \textbf{libre}.
+Mes valeurs tourne autour du respect de la \textbf{liberté} et du \textbf{bon sens}.
 
 \paragraph{Point rapide sur le libre}
-Un logiciel est dit libre s'il respecte les quatre libertés suivantes
+Un logiciel est dit libre s'il respecte les quatre libertés\footnote{D'après Richard \textsc{Stallman}} suivantes
 \begin{enumerate}
-\item La liberté de l'exécuter selon notre bon vouloir
-\item La liberté d'étudier et de modifier le code source
-\item La liberté de le partager
-\item La liberté de partager notre version modifiée
+\item La liberté de l'exécuter selon notre bon vouloir.
+\item La liberté d'étudier et de modifier le code source.
+\item La liberté de le partager selon notre bon vouloir.
+\item La liberté de partager notre version modifiée.
 \end{enumerate}
 
 
@@ -117,14 +121,14 @@ Un logiciel est dit libre s'il respecte les quatre libertés suivantes
 Ma première expérience de la liberté informatique concerne le site web Wikipédia. J'ai été émerveillé par cette Encyclopédie\footnote{Encyclopédie de Diderot} moderne.
 Ce projet collaboratif permet à tout le monde d'apprendre et de participer à la diffusion des connaissances.
 J'ai ensuite fais connaissance avec l'OS\footnote{Operating System (Système d'exploitation)} Gnu/Linux par pur hasard. J'ai fais alors l'expérience d'une liberté que je ne connaissais pas avec Windows. J'utilisais toujours ce dernier, considérant Gnu/Linux comme une curiosité technologique intéressante. 
-Cela a duré jusqu'au moment où je suis tombé par pur hasard encore sur une conférence de R.Stallman\footnote{Richard Matthew \textsc{Stallman} (1953 - ): Fondateur de la Free Software Foundation et diffuseur historique des idées du logiciel libre.}. J'ai alors réalisé à quel point la liberté était importante pour moi.
+Cela a duré jusqu'au moment où je suis tombé par pur hasard (encore une fois) sur une conférence de R.Stallman\footnote{Richard Matthew \textsc{Stallman} (1953 - ): Fondateur de la Free Software Foundation et diffuseur historique des idées du logiciel libre.}. J'ai alors réalisé à quel point la liberté était importante pour moi.
 
 \paragraph{L'influence du libre sur moi}
 Je suis convaincu que nous devons avoir des logiciels libres, tournant sur du materiel libre et en communication entre eux via des bandes-passantes libres afin de rester maître de notre informatique.
-C'est un combat qui me tient à coeur car il me parait juste, éthique et d'une importance capital dans la mesure où nous construisons une ``société assistée par ordinateur''. Je suis en faveur d'une informatique libre, et également d'une culture libre et d'une éducation libre. En effet, l'homme devrait être au centre de la société en tant qu'acteur et non en tant que produit. Le savoir devrait être partagé, et non breveté puis vendu sous licence.
+C'est un combat qui me tient à coeur car il me parait juste, éthique et d'une importance capital dans la mesure où nous construisons une ``société assistée par ordinateur''. Je suis en faveur d'une informatique libre, et également d'une culture libre et d'une éducation libre. En effet, je pense que l'homme devrait être au centre de la société en tant qu'acteur et non en tant que produit. Le savoir devrait être partagé, et non breveté, caché et vendu sous licence.
 
 \paragraph{}
-Mes motivations sont donc portées par ces valeurs. Celle-ci guident grandement la construction de mon projet professionnel, c'est pourquoi j'ai pris la liberté d'autant les détailler (bien qu'il ne s'agisse en réalité que d'un résumé).
+Mes motivations sont donc portées par ces valeurs. Celle-ci guident grandement la construction de mon projet professionnel, c'est pourquoi j'ai pris la liberté d'autant les détailler.
 Je vais ainsi devoir accorder ces valeurs avec mon projet professionnel, ce qui constitue une \textbf{très forte contrainte} que je me fixe comme nous le verrons dans la synthèse du bilan personnel \footnote{Voir le chapitre \ref{RefSyntheseBilanPerso} en page \pageref{RefSyntheseBilanPerso}}.
 
 \newpage
@@ -133,6 +137,7 @@ Je vais ainsi devoir accorder ces valeurs avec mon projet professionnel, ce qui 
 \subsection{Ma formation}
 Voici une liste des diplômes\footnote{Licence d'informatique à venir} obtenu au cours de ma scolarité.
 \begin{figure}[h]
+\begin{center}
 \begin{tabular}{|l|c|r|}
 \hline
 \tabTitle{Diplôme} & \tabTitle{Années} & \tabTitle{Établissement}\\
@@ -144,28 +149,30 @@ Baccalauréat Scientifique & 2013 & Lycée Louis Pasteur \\
 Licence d'Informatique & 2016 & Université de Franche-Comté\\
 \hline
 \end{tabular}
+\end{center}
 \caption{Diplomes obtenus} 
 \end{figure}
+
 \subsection{Mon expérience}
 \paragraph{}
 Je n'ai \textit{\textbf{aucune}} expérience professionnelle en dehors de mon stage de troisième.
 
 \paragraph{}
-Durant cette année de L2 j'ai pu participer à plusieurs reprise à des évenements organisés par l'UFC\footnote{Université de Franche-Comté}. Ces évenements m'ont apportées des expériences de travail d'équipe. En voici un résumé.
+Durant cette année de L2 j'ai pu participer à plusieurs reprise à des \textbf{évenements organisés par l'Université de Franche-Comté}. Ces évenements m'ont apportées des expériences de travail d'équipe. En voici un résumé.
 
 \begin{figure}[h]
-\begin{tabular}{|c|c|c|}
+\begin{tabular}{|l|c|l|}
 \hline
-\tabTitle{Expérience}  &  \tabTitle{Contexte} & \tabTitle{Apports} \\
+\tabTitle{Expérience}  &  \tabTitle{Contexte} & \tabTitle{Technologies}\\
 \hline
-Nuit de L'info 2014  & UFC & Travail d'équipe \\
+Nuit de L'info 2014  & UFC & Javascript/WebGL\\
 \hline
-Club jeux-vidéo (DPS)  & UFC & Travail d'équipe \\
+Club jeux-vidéo (DPS\footnotemark{})  & UFC & C++/SFML 2.1\\
 \hline
-
 \end{tabular}
 \caption{Expériences scolaires}
 \end{figure}
+\footnotetext{Dead Pixel Society- Club de jeux vidéo de l'UFC}
 
 \chapter{Synthèse} \label{RefSyntheseBilanPerso}
 Nous avons vu précédemment une liste de mes compétences et de mes savoirs.
@@ -173,6 +180,7 @@ En voici une synthèse.
 
 \paragraph{Savoir}
 J'ai un baccalauréat scientifique et je prépares une licence d'informatique.
+Je suis en actuellement L2.
 
 \paragraph{Savoir-Être}
 Je suis intéressé par la découverte et le partage de connaissances. C'est un de mes points forts car je suis très motivé et volontaire.
@@ -184,20 +192,18 @@ Il s'agit véritablement de mon point faible car je ne possède aucune expérien
 Mon objectif principal est d'apprendre, d'acquérir de nouvelles compétences au sein d'un travail.
 \section{Mes priorités}
 \paragraph{}
-Dans le cadre du module de PPP j'ai fais un travail d'analyse sur mes priorités professionnelles. Voici les trois principales trouvées.
+Dans le cadre du module de PPP j'ai fais un travail d'analyse sur mes priorités professionnelles. Voici les trois plus importantes.
 
-\paragraph{Résumé}
-Liste de mes principales priorités
+
+\paragraph{Mes priorités professionnelles}
 \begin{enumerate}
 \item Travailler dans un milieu professionnel qui correspond à mes valeurs
 \item Pouvoir faire preuve de créativité
 \item Développer mes compétences : actualiser mon potentiel
 \end{enumerate}
 
-\newpage
 
-\paragraph{Analyse}
-Je vais maintenant préciser un peu ces priorités.
+\paragraph{}
 \subparagraph{Travailler dans un milieu professionnel qui correspond à mes valeurs}
 Car je ne pense pas être capable de travailler dans un milieu ayant des valeurs trop différentes des miennes. 
 
@@ -207,11 +213,65 @@ Car je trouve qu'il est important pour moi d'avoir un degré de liberté minimum
 \subparagraph{Développer mes compétences : actualiser mon potentiel}
 Car j'aime apprendre de nouvelles choses et m'améliorer, et que je ne souhaite pas stagner professionnellement.
 
+\chapter[Mon projet idéal]{Vers un projet professionnel: mon projet idéal}
+Il s'agit ici de définir ce que je \textsc{\textbf{veux}} faire sans s'occuper de ce que je peux faire (nous nous occuperons de cela dans la construction du projet) en fonction de ce que je suis, ce que j'ai fais et ce que je sais faire.
+
+
+\begin{figure}[h]
+\begin{center}
+\begin{tabular}{|l|c|c|}
+  \hline
+  \tabTitle{activité} & \tabTitle{attrait} & \tabTitle{inconvénient}\\
+  \hline
+  \hline
+  L'enseignement & le partage & pas assez technique\\
+  \hline
+  La recherche & la curiosité & néant \\
+  \hline
+  Les SSII\footnotemark{}/SSLL\footnotemark{} & le libre & trop rare\\
+  \hline
+  Developpeur & travail d'équipe & n'existe pas\footnotemark{}\\
+  \hline
+  La création d'activité & tout & risqué\\
+  \hline
+\end{tabular}
+\end{center}
+\caption{Ce que je veux faire}
+\end{figure}
+
+\footnotetext[1]{Société de Service en Ingénierie Informatique (également SS2I) }
+\footnotetext[2]{Société de Service en Logiciel Libre (également SS2L) }
+\footnotetext[3]{Les studios de developpement libre sont très rare (TODO)}
+
+\begin{description}
+\item [Enseignement] C'est ce qu'il y a de mieux pour partager sa passion pour l'informatique. Malheureusement je trouve ça trop peu technique: on passe \textbf{tout} son temps à enseigner et donc on a pas le temps d'approfondir véritablement (DEMANDER).
+
+\item [Recherche] Semble correspondre parfaitement avec mes méthodes de travails. (DEMANDER)
+
+\item [Les SSII] Intéressant car on change souvent de client ce qui permet de varier son travail. Cependant travailler pour un SS2I me forcerait potentiellement à devoir travailler avec des outils non-libre et pour des sociétés qui pourraient ne pas être en phase avec mes valeurs.
+
+\item [Les SSLL] Même intêret que pour les SS2I, les éventuels conflits de valeurs en moins. Ces sociétés sont relativements rare\footnote{Annuaires des SSLL (TODO)}, ce qui m'obligerait à me déplacer.
+ 
+\item [Création d'activité] Bon. C'est très intéressant mais c'est également très risqué mais il y a à faire coté logiciel libre. (DEMANDER)
+
+\item [Developpement] Intuitivement je dirais que ça m'intéresse beaucoup. \\J'aime le travail d'équipe et j'aime programmer. Cependant j'ai peur que ce soit trop routinier. Je pense également ne pas apprécier de \textit{faire} sans \textit{concevoir}.
+\end{description}
+
+
 \part{Projet Professionnel}
 
 \chapter{Construction du projet}
+\paragraph{}
+Dans la partie finale du bilan personnel j'ai dégagé plusieurs projet qui me plairait d'entreprendre. Cependant je vais devoir un choisir un. Devant cette difficulté je choisis de me lancer dans le projet le plus général et le plus en phase avec mon parcours scolaire: \tabTitle{la recherche}. \\
+
+\paragraph{}
+Ce projet va gagner en maturité et va éventuellement changer.
+Je choisis ce projet professionnel car il me laisse la possibilité de changer plus tard, et qu'il est pour le moment celui qui m'enthousiasme et me motive le plus.
+
+
 \section{Missions et tâches}
 \section{L'environnement}
+L'environnement principal d'un chercheur est un laboratoire de recherche.
 
 \chapter{Vers un métier}
 \section{Le domaine d'activité}
@@ -220,6 +280,7 @@ Car j'aime apprendre de nouvelles choses et m'améliorer, et que je ne souhaite 
 \chapter{Rencontre avec des professionnels}
 \section{Le monde du libre}
 \section{Le monde de l'enseignement et de la recherche}
+\section{Le monde du jeu vidéo et de la création d'entreprise}
 
 \chapter{Confrontation au marché}
 \section{Les besoins}
@@ -247,5 +308,7 @@ Car j'aime apprendre de nouvelles choses et m'améliorer, et que je ne souhaite 
 \part{Conclusion}
 \chapter{Apport du Cursus Master en Ingénerie}
 
-
+\listoffigures{}
+\listoftables{}
 \end{document} 
+ 
